--- a/templates/trivia/home.html
+++ b/templates/trivia/home.html
@@ -4,7 +4,7 @@
 {% block title %}{{ user.company.name }} Trivia{% endblock title %}
 
 {% block content %}
-<div class="bg-gray-100 min-h-screen py-12">
+<div class="bg-gradient-to-b from-indigo-100 to-white min-h-screen py-12">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center">
             <h1 class="text-4xl font-extrabold text-gray-900 sm:text-5xl sm:tracking-tight lg:text-6xl">
