--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -8,8 +8,7 @@
 {% endblock head_scripts %}
 
 {% block content %}
-<br>
-    <div class="bg-white">
+    <div class="bg-gradient-to-b from-indigo-100 to-white min-h-screen py-12">
         <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
             <div class="space-y-12">
                 <div class="space-y-5 sm:space-y-4 md:max-w-xl lg:max-w-3xl xl:max-w-none">
@@ -18,7 +17,7 @@
                 {% if show_links %}
                     <br>
                     {% for link in links %}
-                        <a href="{{ link.url }}"><span class="inline-flex items-center rounded-full bg-indigo-100 px-3 py-0.5 text-sm font-medium text-indigo-800">{{ link.name }}</span></a>
+                        <a href="{{ link.url }}"><span class="inline-flex items-center rounded-full bg-indigo-300 px-3 py-0.5 text-sm font-medium text-indigo-800">{{ link.name }}</span></a>
                     {% endfor %}
                 {% endif %}
                 {% if show_map %}
