Remove home in title

--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}{{ user.company.name }} Home{% endblock title %}
+{% block title %}{{ user.company.name }}{% endblock title %}
 {% block head_scripts %}
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
