--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}asdfConnect with Your Co-workers{% endblock title %}
+{% block title %}Connect with Your Co-workers{% endblock title %}
 
 {% block content %}
     <div class="bg-gradient-to-r from-indigo-500 to-purple-600 w-full">
