--- a/templates/_base.html
+++ b/templates/_base.html
@@ -131,7 +131,7 @@
     <div class="mx-auto max-w-7xl overflow-hidden py-12 px-4 sm:px-6 lg:px-8">
         <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
             <div class="px-5 py-2">
-                <a href="https://teambio.betteruptime.com" class="text-base text-gray-500 hover:text-gray-900">Status</a>
+                <a href="https://status.team.bio" class="text-base text-gray-500 hover:text-gray-900">Status</a>
             </div>
             <div class="px-5 py-2">
                 <a href="mailto:support@team.bio" class="text-base text-gray-500 hover:text-gray-900">Support</a>
